--- a/MyDigitalCookbook/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/MyDigitalCookbook/Views/Storyboards/Base.lproj/Main.storyboard
@@ -81,9 +81,14 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="bcE-8i-ppo">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" showsCancelButton="YES" id="Oa0-rW-ALv">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="visionRecipeCell" textLabel="Qu1-zC-Hfu" style="IBUITableViewCellStyleDefault" id="gmE-hF-NFt">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="72" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gmE-hF-NFt" id="Z0s-wY-OSK">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -122,6 +127,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="searchBar" destination="Oa0-rW-ALv" id="oBM-Ff-r72"/>
                         <outlet property="tableView" destination="bcE-8i-ppo" id="izW-qb-pcQ"/>
                     </connections>
                 </viewController>
@@ -197,9 +203,14 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1is-yc-D5d">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" showsCancelButton="YES" id="8jd-bK-Dcr">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="recipeCell" id="ft4-kI-ToW" customClass="RecipeTableViewCell" customModule="MyDigitalCookbook" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="271"/>
+                                        <rect key="frame" x="0.0" y="72" width="414" height="271"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="ft4-kI-ToW" id="an1-MJ-fEk">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="271"/>
@@ -255,6 +266,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
+                        <outlet property="searchBar" destination="8jd-bK-Dcr" id="TcS-LQ-MCx"/>
                         <outlet property="tableView" destination="1is-yc-D5d" id="DCG-zb-JLh"/>
                     </connections>
                 </viewController>
@@ -392,14 +404,22 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="TUh-JC-McS">
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="t1E-SR-GOJ">
-                            <connections>
-                                <action selector="saveButtonTapped:" destination="lBR-mI-8IF" id="IV7-rY-eil"/>
-                            </connections>
-                        </barButtonItem>
+                        <rightBarButtonItems>
+                            <barButtonItem systemItem="save" id="t1E-SR-GOJ">
+                                <connections>
+                                    <action selector="saveButtonTapped:" destination="lBR-mI-8IF" id="IV7-rY-eil"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="edit" id="oIO-KB-hbY">
+                                <connections>
+                                    <action selector="editButtonTapped:" destination="lBR-mI-8IF" id="x9o-aZ-xsM"/>
+                                </connections>
+                            </barButtonItem>
+                        </rightBarButtonItems>
                     </navigationItem>
                     <connections>
                         <outlet property="addButton" destination="HLN-l3-qtQ" id="jTJ-sW-FoO"/>
+                        <outlet property="editButton" destination="oIO-KB-hbY" id="PUZ-5d-Ios"/>
                         <outlet property="photoImageView" destination="CeM-fx-6hJ" id="85k-ri-ix6"/>
                         <outlet property="recipeItemTextField" destination="BnZ-S1-Wdd" id="0Nh-2u-Hlz"/>
                         <outlet property="recipeNameTextField" destination="0OM-Ry-XJ4" id="H57-J2-ZC6"/>
